--- a/.github/workflows/myfristworkflow.yaml
+++ b/.github/workflows/myfristworkflow.yaml
@@ -18,3 +18,17 @@ jobs:
                   echo "Please Alex is Friday let me escape" >> newfile.yaml
                   cat newfile.yaml
                   pwd
+    mysecondjob: 
+              needs: [myfistjob]
+              name: Second job
+              runs-on: macos-latest
+              steps:
+              - name: Step One
+                run: date
+    mythirdjob: 
+              name: Third job
+              runs-on: windows-latest
+              steps:
+              - name: Step One
+                run: date
+               
