--- a/.github/workflows/myfristworkflow.yaml
+++ b/.github/workflows/myfristworkflow.yaml
@@ -14,8 +14,8 @@ jobs:
                 uses: actions/checkout@v3
               - name: Step Two
                 run: | 
-                  touch newfile.yaml
-                  echo "Please Alex is Friday let me escape" >> newfile.yaml
+                  touch ${{secrets.MY_SECRET}}.yaml
+                  echo "Please Alex is Friday let me escape" >> ${{secrets.MY_SECRET}}.yaml
                   cat newfile.yaml
                   pwd
     mysecondjob: 
